sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:10: error: value || is not a member of Int
			if (ecart = 10 || 9) {ecart=11}
                                       ^AlgCombSort11:10: error: type mismatch;
 found   : Unit
 required: Boolean
			if (ecart = 10 || 9) {ecart=11}
                                  ^